--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@mantine/core": "^8.2.4",
         "@mantine/hooks": "^8.2.4",
         "@mantinex/mantine-logo": "^2.0.0",
+        "@supabase/supabase-js": "^2.55.0",
         "axios": "^1.11.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
