--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@mantine/core": "^8.2.4",
+        "@mantine/form": "^8.2.4",
         "@mantine/hooks": "^8.2.4",
         "@mantinex/mantine-logo": "^2.0.0",
         "@supabase/supabase-js": "^2.55.0",
