--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mantinex/dev-icons": "^2.0.0",
         "@supabase/supabase-js": "^2.55.0",
         "axios": "^1.11.0",
+        "notyf": "^3.10.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.8.0"
@@ -25,6 +26,7 @@
     "devDependencies": {
         "@eslint/js": "^9.30.1",
         "@types/axios": "^0.9.36",
+        "@types/notyf": "^2.0.0",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@types/react-router-dom": "^5.3.3",
